Syncable services always use profile storage

Syncable services don't support ephemeral storage, so we should not try
to use the account storage for them. Instead, the USS bridges will be
capable of doing this.

Using the account storage caused wallet metadata sync to be broken for
full sync users when the enable-autofill-account-wallet-storage flag was
on.

Bug: 893589
Change-Id: I4f943a2f654e519873e2390bb1fabfbada3c48f0
Reviewed-on: https://chromium-review.googlesource.com/c/1270959
Reviewed-by: Marc Treib <treib@chromium.org>
Commit-Queue: Marc Treib <treib@chromium.org>
Commit-Queue: Florian Uunk <feuunk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597921}
Former-commit-id: 4f6065717084a42b498c83c5d6d99afd64f6bbc7